<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Course Work</string>
    <string name="identify_the_car_image">Identify the Car Image</string>
    <string name="identify_the_car_make">Identify the Car Make</string>
    <string name="advanced_level">Advanced level</string>
    <string name="hints">Hints</string>
    <string name="car_founder">Car Founder</string>
    <string name="identify_the_car_make_">Identify the car make</string>
    <string name="identify_the_car_image_">Identify the car image</string>
    <string name="exit">EXIT</string>
    <string name="timer">Timer</string>
    <string name="car_identifier_hints">Car Identifier Hints</string>
    <string name="enter_letter_for_hint">Enter Letter For Hint</string>
    <string name="todo1">TODO</string>
    <string name="advanced_level_">Advanced Level</string>
    <string name="todo2">TODO</string>
    <string name="enter_name1">Enter Name</string>
    <string name="enter_name2">Enter Name</string>
    <string name="enter_name3">Enter Name</string>
    <string name="todo">todo1</string>
    <string name="todo3" tools:ignore="DuplicateDefinition">TODO</string>
    <string name="car_finder" />
    <string name="car_finder1">Car Finder</string>

</resources>