<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnAL"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="224dp"
        android:layout_height="52dp"
        android:background="@drawable/home_buttons"
        android:text="@string/advanced_level"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/cousine_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.733"
        />

    <Button
        android:id="@+id/btnHints"
        android:layout_width="153dp"
        android:layout_height="54dp"
        android:background="@drawable/home_buttons"
        android:text="@string/hints"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/cousine_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="450dp"
        android:layout_height="63dp"
        android:background="@drawable/header"
        android:fontFamily="@font/yatra_one"
        android:text="@string/car_finder1"
        android:textAlignment="center"
        android:textColor="#192a56"
        android:textSize="46sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <Button
        android:id="@+id/btnCarMake"
        android:layout_width="304dp"
        android:layout_height="49dp"
        android:background="@drawable/home_buttons"
        android:fontFamily="@font/cousine_bold"
        android:text="@string/identify_the_car_make_"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353" />

    <Button
        android:id="@+id/btnCarImage"
        android:layout_width="290dp"
        android:layout_height="54dp"
        android:background="@drawable/home_buttons"
        android:text="@string/identify_the_car_image_"
        android:textAlignment="center"
        android:textSize="18sp"
        android:fontFamily="@font/cousine_bold"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.475" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="304dp"
        android:background="@drawable/exit_button"
        android:fontFamily="@font/bungee_inline"
        android:text="@string/exit"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="92dp"
        android:layout_height="30dp"
        android:text="@string/timer"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

</androidx.constraintlayout.widget.ConstraintLayout>