<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page_background"
    tools:context=".AdvancedLevel">

    <TextView
        android:id="@+id/txtAnswerAll"
        android:layout_width="144dp"
        android:layout_height="44dp"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/txtAL"
        android:layout_width="334dp"
        android:layout_height="54dp"
        android:background="@drawable/headings_border"
        android:text="@string/advanced_level_"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="@font/yatra_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />


    <ImageView
        android:id="@+id/imgAl3"
        android:layout_width="142dp"
        android:layout_height="141dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862"
        app:srcCompat="?android:attr/panelBackground"
        tools:ignore="MissingConstraints,UnknownId" />

    <ImageView
        android:id="@+id/imgAl2"
        android:layout_width="142dp"
        android:layout_height="141dp"
        android:contentDescription="@string/todo2"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527"
        app:srcCompat="?android:attr/panelBackground"
        tools:ignore="MissingConstraints,UnknownId" />

    <TextView
    android:id="@+id/txtAnswer1"
    android:layout_width="144dp"
    android:layout_height="44dp"
    android:textAlignment="center"
    android:textSize="36sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.767"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.203" />

    <TextView
        android:id="@+id/txtAnswer2"
        android:layout_width="144dp"
        android:layout_height="44dp"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467" />

    <TextView
        android:id="@+id/txtAnswer3"
        android:layout_width="144dp"
        android:layout_height="44dp"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772" />

    <ImageView
        android:id="@+id/imgAl1"
        android:layout_width="142dp"
        android:layout_height="141dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218"
        app:srcCompat="?android:attr/panelBackground"
        tools:ignore="MissingConstraints,UnknownId,UnknownIdInLayout" />

    <EditText
        android:id="@+id/answer1"
        android:layout_width="186dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Enter image 1 Car Brand"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305" />

    <EditText
        android:id="@+id/answer3"
        android:layout_width="186dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Enter image 1 Car Brand"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.858" />

    <EditText
        android:id="@+id/answer2"
        android:layout_width="186dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Enter image 1 Car Brand"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="152dp"
        android:layout_height="47dp"
        android:background="@drawable/next_button"
        android:onClick="submit"
        android:textAlignment="center"
        android:textColor="#2c3e50"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>